sample/asm/invalid_operand_types/fgte.asm
.function: main/1
    register (class 1 Foo)
    new 1 Foo

    fstore 2 1.0

    fgte 3 1 2

    izero 0
    return
.end
